final for github

--- a/report/report.tex
+++ b/report/report.tex
@@ -3,7 +3,7 @@
 \title{COMPSCI2026 Algorithmics \\ \vspace{4mm} 
  Assessed Exercise -- Status and Implementation Reports}
 
-\author{\bf Insert your name\\ \bf and matriculation number here}
+\author{\bf Esmeralda Jardine\\ \bf 2391491}
 
 \date{\today}
 
